tests/ui/on_use.rs
use enum_parity::bit_parity;

#[bit_parity(even)]
#[repr(u8)]
use std::fs::File;

fn main() {}
